# TimeDesk

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
examples/: competition_notice.txt  course_notice.txt  fuzzy_notice.txt  meeting_note.txt  work_email.txt
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: llm.rs  main.rs
src/components/: EmptyState.tsx  EventCard.tsx  EventDetailDrawer.tsx  InputPanel.tsx  SettingsPanel.tsx  TimelineWidget.tsx
src/prompts/: timelineExtractionPrompt.ts
src/services/: analysisValidator.ts  eventNormalizer.ts  fileTextExtractor.ts  llmClient.ts  reminderService.ts  storageService.ts  timelineService.ts
src/styles/: app.css
src/types/: analysis.ts  event.ts  settings.ts
