[package]
name = "timedesk"
version = "0.1.0"
description = "A quiet desktop timeline widget"
authors = ["TimeDesk"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1.6", features = [ "window-set-always-on-top", "notification-all"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
